eclipse/src/com/urjc/master/semv/error.txt
rm: cannot remove 'parser.class': No such file or directory
rm: cannot remove 'sym.class': No such file or directory
Warning : Terminal "include" was declared but never used
Warning : Terminal "hfile" was declared but never used
------- CUP v0.11b 20160615 (GIT 4ac7450) Parser Generation Summary -------
  0 errors and 2 warnings
  39 terminals, 21 non-terminals, and 52 productions declared, 
  producing 118 unique parse states.
  2 terminals declared but not used.
  0 non-terminals declared but not used.
  0 productions never reduced.
  0 conflicts detected (0 expected).
  Code written to "parser.java", and "sym.java".
---------------------------------------------------- (CUP v0.11b 20160615 (GIT 4ac7450))
warning: [path] Unexpected file on path: /usr/bin/jflex
warning: [path] bad path element "/home/javi/PL/src/com/urjc/master/semv": no such file or directory
./parser.java:7: error: package com.urjc.master.semv does not exist
import com.urjc.master.semv.Ambito;
                           ^
./parser.java:277: error: cannot access Ambito
	private Ambito root;
	        ^
  bad source file: ./Ambito.java
    file does not contain class Ambito
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
2 errors
2 warnings
Exception in thread "main" java.lang.NoClassDefFoundError: AnalizadorLexico
	at Analizador.main(Analizador.java:15)
Caused by: java.lang.ClassNotFoundException: AnalizadorLexico
	at java.net.URLClassLoader.findClass(URLClassLoader.java:381)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:424)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:335)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:357)
	... 1 more
